Change date format

--- a/layouts/post/single.html
+++ b/layouts/post/single.html
@@ -14,7 +14,7 @@
         · {{ if lt 1 .WordCount }}
             {{ .WordCount }} slov
         {{ else }}
-            {{ .WordCount }} word
+            {{ .WordCount }} slov
         {{ end }}
         <span class="tags">
         {{ with .Params.tags }}
