--- a/layouts/index.html
+++ b/layouts/index.html
@@ -9,6 +9,7 @@
                 <time>{{ .Date.Format (.Site.Params.dateform) }}
                 </time>
             </div>
+            <div>{{ .Summary }}</div>
         </li>
         {{ end }}
     </ul>
