Add missing taxonomy templates

--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -1,7 +1,17 @@
 </div>
 {{ template "_internal/google_analytics_async.html" . }}
 
-<div id="copyright">©2017 Lukáš Hajdu</div>
+<div id="copyright">
+    <span>
+        ©2017 Lukáš Hajdu | Ak sa neuvádza inak, obsah stránky podlieha licencii
+        <a rel="license" href="http://creativecommons.org/licenses/by-nc/4.0/">
+            CC BY-NC 4.0
+        </a>
+    </span>
+    <a rel="license" href="http://creativecommons.org/licenses/by-nc/4.0/">
+        <img alt="Creative Commons License" src="https://i.creativecommons.org/l/by-nc/4.0/80x15.png" />
+    </a>
+</div>
 
 </body>
 </html>
