--- a/layouts/_default/single.html
+++ b/layouts/_default/single.html
@@ -1,6 +1,6 @@
 {{ partial "header.html" . }}
 
-<section id=content>
+<section id="content">
     <h1>{{ .Title }}</h1>
 
     <div class="entry-content">
